fix nav letterspacing [Closes #99]

--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -62,6 +62,7 @@ li p {margin: 0;}
 .blog-edit {margin-left: 1em;}
 #frm-articleForm input[type=text] {width: 640px;}
 #frm-articleForm textarea {width: 640px; height: 320px;}
+.nav-subheader > span > a {letter-spacing: 0; margin-left: 17px;}
 
 /* ----  iPad 3 ---- */
 .ipad-only {display: none;}
